--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ html {
 }
 
 .uni-logo {
-    background-image: url(/images/logo.svg);
+    background-image: url(images/logo.svg);
     background-repeat: no-repeat;
     width: 70px;
     height: 50px;
